<resources>
    <string name="app_name">CalculApp</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="slash">/</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="x">x</string>
    <string name="sustract">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="add">+</string>
    <string name="ac">AC</string>
    <string name="pi">π</string>
    <string name="sqrt">√</string>
    <string name="factorial">!</string>
</resources>