<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/_7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/_8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/_9"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/_5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/_4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/azulclaro"
        android:text="@string/slash"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonTimes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/_6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/buttonTimes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/buttonTimes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azulclaro"
        android:text="@string/x"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSustract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/_2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/_3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSqrt"
        app:layout_constraintEnd_toStartOf="@+id/buttonSustract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/buttonSustract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azulclaro"
        android:text="@string/sustract"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/buttonTimes" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azulclaro"
        android:text="@string/dot"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAC"
        app:layout_constraintEnd_toStartOf="@+id/button_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/_0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPi"
        app:layout_constraintEnd_toStartOf="@+id/buttonSqrt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonDot"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/buttonSqrt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azulclaro"
        android:text="@string/sqrt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonExclamation"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azulclaro"
        android:text="@string/add"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSqrt"
        app:layout_constraintTop_toBottomOf="@+id/buttonSustract" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="329dp"
        android:layout_height="111dp"
        android:layout_marginTop="280dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azulclaro"
        android:text="@string/ac"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonPi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/azul"
        android:text="@string/pi"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonExclamation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAC"
        app:layout_constraintTop_toBottomOf="@+id/button_0" />

    <Button
        android:id="@+id/buttonExclamation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/factorial"
        android:backgroundTint="@color/azulclaro"
        app:cornerRadius="0dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPi"
        app:layout_constraintTop_toBottomOf="@+id/buttonSqrt" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equals"
        android:backgroundTint="@color/azulclaro"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        app:cornerRadius="0dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonExclamation"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>